--- a/admin_panel/staticfiles/admin/css/override.css
+++ b/admin_panel/staticfiles/admin/css/override.css
@@ -1,6 +1,3 @@
-.discord-row {
-}
-
 .discord-row a.discord-button {
     background: #5865F2;
     display: flex;
@@ -11,7 +8,7 @@
 }
 
 .discord-row a.discord-button:hover {
-    background: color-mix(in srgb, #5865F2, black 30%)
+    background: color-mix(in srgb, #5865F2, black 30%);
 }
 
 .discord-button * {
